--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,10 @@ jobs:
         run: bun install
 
       - name: Type check
-        run: bun run typecheck
+        run: bun turbo typecheck
 
       - name: Run unit tests
-        run: bun run test
+        run: bun turbo test
 
       - name: Run integration tests
         run: bun run test:integration
