--- a/packages/opencode-swarm-plugin/package.json
+++ b/packages/opencode-swarm-plugin/package.json
@@ -14,7 +14,8 @@
       "types": "./dist/index.d.ts"
     },
     "./plugin": {
-      "import": "./dist/plugin.js"
+      "import": "./dist/plugin.js",
+      "types": "./dist/plugin.d.ts"
     }
   },
   "scripts": {
@@ -25,14 +26,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@clack/prompts": "^0.11.0",
-    "@effect/schema": "^0.75.5",
     "@opencode-ai/plugin": "^1.0.134",
-    "effect": "^3.19.12",
     "gray-matter": "^4.0.3",
     "ioredis": "^5.4.1",
-    "minimatch": "^10.1.1",
-    "nanoid": "^5.1.6",
     "swarm-mail": "workspace:*",
     "zod": "4.1.8"
   },
