--- a/packages/swarm-mail/package.json
+++ b/packages/swarm-mail/package.json
@@ -19,5 +19,10 @@
     "effect": "^3.19.12",
     "@electric-sql/pglite": "0.3.14",
     "zod": "4.1.8"
+  },
+  "devDependencies": {
+    "bun-types": "^1.3.4",
+    "typescript": "^5.7.2",
+    "vitest": "^2.1.8"
   }
 }
