--- a/turbo.json
+++ b/turbo.json
@@ -10,6 +10,10 @@
     },
     "typecheck": {
       "dependsOn": ["^build"]
+    },
+    "publish:pkg": {
+      "dependsOn": ["build"],
+      "cache": false
     }
   }
 }
