feat(memory): add legacy migration tool + fix hive test isolation
## Migration Tool
- `migrateLegacyMemories()` - migrate from ~/.semantic-memory to swarm-mail
- `getMigrationStatus()` - check migration status without migrating
- `legacyDatabaseExists()` - check if legacy database exists
- Handles embeddings, metadata, collections
- Skips existing memories (idempotent)
- Dry-run mode for preview

## Test Fixes
- Hive tests now use `runMigrations()` instead of manual migration
- Fixes duplicate key errors from applying beadsMigration twice
- All 539 tests passing

## Package Updates
- Test script now includes memory/ and hive/ directories

--- a/packages/swarm-mail/package.json
+++ b/packages/swarm-mail/package.json
@@ -27,7 +27,7 @@
   "license": "MIT",
   "scripts": {
     "build": "bun build ./src/index.ts --outdir ./dist --target node --external @electric-sql/pglite --external postgres && tsc",
-    "test": "bun test src/streams/ --timeout 60000",
+    "test": "bun test src/streams/ src/memory/ src/hive/ --timeout 60000",
     "test:beads": "bun test src/beads/ --timeout 60000",
     "test:integration": "vitest run src/streams/**/*.integration-test.ts --testTimeout 60000",
     "test:all": "bun test src/ --timeout 60000",
