--- a/packages/swarm-mail/package.json
+++ b/packages/swarm-mail/package.json
@@ -6,7 +6,8 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "bin": {
-    "swarm-mail-daemon": "./bin/daemon-cli.ts"
+    "swarm-mail-daemon": "./bin/daemon-cli.ts",
+    "swarm-db": "./bin/swarm-db.ts"
   },
   "files": [
     "dist",
@@ -39,6 +40,8 @@
   },
   "dependencies": {
     "@libsql/client": "^0.15.15",
+    "@libsql/darwin-arm64": "^0.5.22",
+    "debug": "^4.4.3",
     "drizzle-orm": "^0.41.0",
     "effect": "^3.19.12",
     "minimatch": "^10.1.1",
@@ -47,6 +50,7 @@
     "zod": "4.1.8"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.12",
     "@types/node": "^25.0.3",
     "@types/proper-lockfile": "^4.1.4",
     "bun-types": "^1.3.4",
