fix: bulletproof test suite - fix isolation issues causing 19 test failures
- ollama.test.ts: restore global.fetch after each test (was polluting other tests)
- durable-server.ts: use dynamic port getter for port 0 support
- durable-server.test.ts: use OS-assigned ports, rewrite for proper isolation
- memory-operations.ts: flat schema for Anthropic API compatibility
- rename memory-operations.test.ts to .integration.test.ts

1406 tests pass, 6 skipped, 0 failures

--- a/packages/opencode-swarm-plugin/package.json
+++ b/packages/opencode-swarm-plugin/package.json
@@ -34,6 +34,7 @@
     "eval:decomposition": "bun --env-file=.env run bunx evalite run evals/swarm-decomposition.eval.ts",
     "eval:coordinator": "bun --env-file=.env run bunx evalite run evals/coordinator-session.eval.ts",
     "eval:compaction": "bun --env-file=.env run bunx evalite run evals/compaction-prompt.eval.ts",
+    "eval:gate": "bun run bin/eval-gate.ts",
     "migrate:sessions": "bun run scripts/migrate-unknown-sessions.ts",
     "postinstall": "node -e \"console.log('\\n\\x1b[33m  Run \\x1b[36mswarm setup\\x1b[33m to configure OpenCode integration\\x1b[0m\\n')\""
   },
