--- a/packages/swarm-mail/package.json
+++ b/packages/swarm-mail/package.json
@@ -32,14 +32,14 @@
   "license": "MIT",
   "scripts": {
     "build": "bun build ./src/index.ts --outdir ./dist --target node --external @libsql/client --external @electric-sql/pglite && tsc",
-    "test": "bun test src/streams/ src/memory/ src/hive/ --timeout 60000",
-    "test:beads": "bun test src/beads/ --timeout 60000",
-    "test:integration": "vitest run src/streams/**/*.integration-test.ts --testTimeout 60000",
-    "test:all": "bun test src/ --timeout 60000",
+    "test": "bun test src/ --timeout 60000",
+    "test:integration": "bun test src/ --timeout 120000",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.0.0",
     "@libsql/client": "^0.15.15",
+    "ai": "6.0.0-beta.150",
     "debug": "^4.4.3",
     "drizzle-orm": "^0.41.0",
     "effect": "^3.19.12",
@@ -53,6 +53,7 @@
     "@types/node": "^25.0.3",
     "@types/proper-lockfile": "^4.1.4",
     "bun-types": "^1.3.4",
+    "dotenv": "^17.2.3",
     "drizzle-kit": "^0.31.0",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8"
