fix: only 🐝 emoji allowed in tweets

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -57,7 +57,7 @@ jobs:
           model: "anthropic/claude-sonnet-4-20250514"
           api-key: ${{ secrets.AI_GATEWAY_API_KEY }}
           prompt: |
-            Summarize this changelog into a tweet (max 280 chars) announcing the release from @swarmtoolsai. Be concise and mass-market appealing, highlight the key feature, use 1-2 relevant emoji. No hashtags. Include the version number. Make it sound exciting but not cringe. Output ONLY the tweet text, nothing else.
+            Summarize this changelog into a tweet (max 280 chars) announcing the release from @swarmtoolsai. Be concise, highlight the key feature. The ONLY emoji allowed is 🐝 - use it once at most. No hashtags. Include the version number. Keep it professional, not cringe. Output ONLY the tweet text, nothing else.
 
             Changelog:
             ${{ steps.changelog.outputs.content }}
