--- a/packages/opencode-swarm-plugin/package.json
+++ b/packages/opencode-swarm-plugin/package.json
@@ -16,8 +16,21 @@
     "./plugin": {
       "import": "./dist/plugin.js",
       "types": "./dist/plugin.d.ts"
+    },
+    "./eval-capture": {
+      "import": "./dist/eval-capture.js",
+      "types": "./dist/eval-capture.d.ts"
+    },
+    "./compaction-prompt-scoring": {
+      "import": "./dist/compaction-prompt-scoring.js",
+      "types": "./dist/compaction-prompt-scoring.d.ts"
     }
   },
+  "files": [
+    "dist",
+    "bin",
+    "README.md"
+  ],
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
@@ -56,11 +69,9 @@
     "@types/minimatch": "^6.0.0",
     "ai": "6.0.0-beta.150",
     "bun-types": "^1.3.4",
-    "evalite": "^1.0.0-beta.10",
     "pino-pretty": "^13.1.3",
     "turbo": "^2.6.3",
-    "typescript": "^5.7.0",
-    "vitest": "^4.0.15"
+    "typescript": "^5.7.0"
   },
   "peerDependencies": {
     "@opencode-ai/plugin": "^1.0.0"
