--- a/packages/swarm-evals/package.json
+++ b/packages/swarm-evals/package.json
@@ -32,16 +32,14 @@
   },
   "dependencies": {
     "evalite": "^1.0.0-beta.10",
-    "ai": "6.0.0-beta.150"
+    "ai": "6.0.0-beta.150",
+    "opencode-swarm-plugin": "workspace:*",
+    "swarm-mail": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^22.19.3",
     "bun-types": "^1.3.4",
     "typescript": "^5.7.2",
     "vitest": "^4.0.15"
-  },
-  "peerDependencies": {
-    "opencode-swarm-plugin": "workspace:*",
-    "swarm-mail": "workspace:*"
   }
 }
